Refactor: Introduce OrchestrationContext for richer request context and integrating behaviour module (#84)
* Refactor: Pass session ID and use explicit user ID

Co-authored-by: engmahmoudalgamal <engmahmoudalgamal@gmail.com>

* Refactor: Introduce OrchestrationContext for richer request context

This commit introduces the OrchestrationContext class to encapsulate request details like user ID, session ID, IP address, and locale. This refactoring enhances the flexibility and traceability of requests processed by the RAG orchestrator and intent extractor. It also includes the integration of behavior context, allowing for more personalized AI responses.

Co-authored-by: engmahmoudalgamal <engmahmoudalgamal@gmail.com>

* Refactor: Add @Autowired to SystemContextBuilder constructor

Co-authored-by: engmahmoudalgamal <engmahmoudalgamal@gmail.com>

* Refactor RAGOrchestrator to improve suggestion metadata and error logging

Co-authored-by: engmahmoudalgamal <engmahmoudalgamal@gmail.com>

* Refactor: Update IntentQueryExtractor mock to use OrchestrationContext

Co-authored-by: engmahmoudalgamal <engmahmoudalgamal@gmail.com>

* Add Orchestrator documentation and user guide

Co-authored-by: engmahmoudalgamal <engmahmoudalgamal@gmail.com>

* Refactor: Rewrite Orchestrator documentation for clarity

Co-authored-by: engmahmoudalgamal <engmahmoudalgamal@gmail.com>

* Add flag to enable/disable real API tests

Co-authored-by: engmahmoudalgamal <engmahmoudalgamal@gmail.com>

* Remove redundant RUN_REAL_API_TESTS check

Co-authored-by: engmahmoudalgamal <engmahmoudalgamal@gmail.com>

* Fix: Filter nulls from metadata and user attributes before copying

Co-authored-by: engmahmoudalgamal <engmahmoudalgamal@gmail.com>

* Refactor: Add null check for payload data in integration test

Co-authored-by: engmahmoudalgamal <engmahmoudalgamal@gmail.com>

* Refactor: Use String for userId to support flexible IDs

This change replaces UUID with String for user IDs across the behavior module. This